--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: url('../public/pattern.svg');
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
