--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: url('../public/pattern.svg');
-  background-repeat:no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  // margin: 0;
+  // padding: 0;
+  // font-family: sans-serif;
+  // background: url('../public/pattern.svg');
+  // background-repeat:no-repeat;
+  // background-size: cover;
+  // background-attachment: fixed;
 }
